Fix: add better size rules to logo on mobile

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -47,6 +47,7 @@ $max-size: 74px;
       img {
         display: block;
         max-height: 23px;
+        max-width: 100%;
 
         @media (min-width: $bp-laptop) {
           max-height: 30px;
